apps/music/homepage/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: media
  labels:
    app: homepage
    app.kubernetes.io/part-of: music
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
